--- a/ansible/templates/.gitconfig.j2
+++ b/ansible/templates/.gitconfig.j2
@@ -1,6 +1,7 @@
 [user]
 	name = {{ name | default('John Paul Herold') }}
 	useConfigOnly = true
+	email = {{ email | default('mmcmurray@examsoft.com') }}
 [color]
 	ui = true
 [core]
